# xogame

./: .gitignore  LICENSE  README.md
game-service/game/: Dockerfile  __init__.py  entrypoint.sh  pyproject.toml  reducer.py  service.py  settings.py
game-service/game/db/: client.py  models.py
game-service/game/db/alembic/: env.py
game-service/game/db/alembic/versions/: 34f9d837ebeb_create_eventlog_table.py
game-service/game/domain/commands/: __init__.py
game-service/game/domain/events/: game.py  moves.py
game-service/game/endpoints/: events.py
game-service/game/events/: __init__.py  moves.py
game-service/game/events/commands/: __init__.py
game-service/game/scripts/: migrate.sh
game-service/ws_frontend/: Dockerfile  pyproject.toml  service.py
game-service/ws_frontend/clients/: game_service.py
game-service/ws_frontend/schemas/: auth.py  msg.py
game-service/ws_frontend/scripts/: start.sh
services/api/: .env.example  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml  service.py  settings.py
services/api/clients/: game_service.py
services/api/db/: alembic.ini  client.py  models.py
services/api/db/alembic/versions/: 1a0729a5ea38_create_players_table.py  492408566602_create_game_table.py  5a503b995cfd_create_users_table.py  fd5e5df6c63c_add_player_opponent_info_to_game.py
services/api/db/schemas/: game.py  player.py
services/api/endpoints/: auth.py  player.py
services/api/endpoints/auth/: __init__.py  schemas.py  util.py
services/api/endpoints/game/: __init__.py  schemas.py
services/api/endpoints/player/: __init__.py  schemas.py
services/api/nginx/: service.conf
services/api/scripts/: start.sh
services/game/: .env.example  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml  service.py  settings.py
services/game/clients/: ws_frontend.py
services/game/db/: __init__.py  client.py  models.py
services/game/db/alembic/: env.py
services/game/db/schemas/: eventlog.py
services/game/domain/: __init__.py  reducer.py  state.py
services/game/domain/commands/: __init__.py
services/game/domain/events/: __init__.py  base.py  game.py  moves.py
services/game/endpoints/: events.py
services/game/nginx/: Dockerfile  service.conf
services/game/scripts/: lint.sh  start.sh
(+24 files in other folders)
